# swarm-notes

./: .gitignore  LICENSE  README.md  analyst.py  config.yaml.example  librarian.py  main.py  public_feed.json  pyproject.toml  requirements.txt  router.py  taxonomy.json  vault_writer.py
.github/workflows/: autonomous-tracker.yml  deploy-quartz.yml  deploy-website.yml  tests.yml
configs/: config.ts.yaml
scripts/: build_website.sh  migrate_vault_to_source_ids.py
skills/: __init__.py  base.py  registry.py  time_series.py
skills/general-ml/: skill.yaml
skills/nlp/: skill.yaml
skills/physics/: skill.yaml
skills/time-series/: skill.yaml
src/: analyst.py  config.py  federation.py  main.py  public_feed.json  router.py  vault_manager.py  vault_writer.py  watcher.py
src/swarm_cruise/: __init__.py  analyst.py  config.py  discussant.py  domain_expert.py  federation.py  main.py  router.py  vault_manager.py  vault_writer.py  watcher.py
src/swarm_notes/: analyst.py  config.py  critic.py  discussant.py  domain_expert.py  federation.py  main.py  router.py  vault_manager.py  vault_writer.py  watcher.py
tests/: test_analyst.py  test_config.py  test_critic.py  test_federation.py  test_main.py  test_router.py  test_vault_manager.py  test_vault_writer.py  test_watcher.py
vault/: index.md  public_feed.json
vault/concepts/: 1-f-noise-nonstationarity-test.md  2d-selective-scan-for-time-series.md  4d-fmcw-lidar-perception.md  4dvar-super-resolution-training.md  accuracy-realism-trade-off-in-forecasting.md  acoustic-camouflage.md  action-conditioned-latent-world-model.md  active-learning-multi-objective-design.md  active-learning-multi-objective-optimization.md  activity-driven-graph-edit-forecasting-a-gef.md  adaptive-attenuation-mechanism-volatility-downweighting.md  adaptive-auto-harness.md  adaptive-conformal-anomaly-detection.md  adaptive-distance-learning-for-likelihood-free-inference.md  adaptive-frequency-fusion-forecasting.md  adaptive-graph-agent-attention.md  (+1161 more)
website/: astro.config.mjs  entries-debug.json  package-lock.json  package.json  quartz.config.ts  test-ids.mjs
(+3189 files in other folders)
