[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-cruise"
version = "0.1.0"
description = "Autonomous multi-agent system for ingesting academic papers into an Obsidian knowledge vault"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
research-cruise = "main:cli"
research-cruise-librarian = "librarian:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
