[project]
name = "swarm-cruise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LM", email = "hi@leima.is" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai>=1.71.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[project.scripts]
swarm-cruise = "swarm_cruise.main:app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
